test/conformance/chainsaw/exceptions/with-wildcard/configmap-allowed.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: emergency
