test/conformance/chainsaw/exceptions/with-wildcard/exception.yaml
apiVersion: kyverno.io/v2beta1
kind: PolicyException
metadata:
  name: mynewpolex
spec:
  exceptions:
    - policyName: require-labels
      ruleNames:
        - another-rule
        - "*"
  match:
    any:
      - resources:
          kinds:
            - ConfigMap
          names:
            - emergency
