test/conformance/chainsaw/exceptions/with-wildcard/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: with-wildcard
spec:
  concurrent: false
  steps:
  - name: create policy
    use:
      template: ../../_step-templates/create-policy.yaml
      with:
        bindings:
        - name: file
          value: policy.yaml
  - name: wait policy ready
    use:
      template: ../../_step-templates/cluster-policy-ready.yaml
      with:
        bindings:
        - name: name
          value: require-labels
  - name: step-02
    try:
    - apply:
        file: exception.yaml
  - name: step-03
    try:
    - apply:
        file: configmap-allowed.yaml
    - apply:
        expect:
        - check:
            ($error != null): true
        file: configmap-rejected.yaml
    - assert:
        file: configmap-allowed.yaml
    - error:
        file: configmap-rejected.yaml
